--- a/homeworks/hw1/index.html
+++ b/homeworks/hw1/index.html
@@ -1,6 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    <body>
-        Homework 1
-    </body>
+    <h1> Caleb Shih</h1>
+    <em> Cognitive Science & Data Science Third Year</em>
+    <p> I'm Caleb. I study CogSci and DataSci at UC Berkeley. I am originally from the bay area. I love being outside and playing different sports. I am a big fan of NFL where my favorite team is the Indianapolis Colts </p>
+    <h2>Favorite food places in Berkeley</h2>
+    <ul>
+        <li>Jupyter</li>
+        <li>Kimchi Garden</li>
+        <li>Toss</li>
+    </ul>
+    <img src ="assets/img/IMG_0344.JPG" />
+    <a href="https://youtube.com">Youtube Link</a>
+    <ul>
+        <li>Question 1: From this article, I learned the importance of noticing design everywhere. Whether it be an app or just things around you, desing is everywhere, and taking an active role in looking and examing design helps develop the desing eye. </li>
+        <li>Question 2: My favorite part of the article was definitely the example gifs. Writing out how to notice design can only help so far. Providing actual examples gives me more guidance and shows me better ways in which to keep looking for desings in apps around me.</li>
+        <li> Question 3: "When I started off in design, I sucked."</li>
+        <li> Question 4: 10 </li>
+    </ul>
 </html>
